doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;\\vsrvm\Aspen_Creek\student\Sophia Steven\private\Java Files_2016\Java Chapter Files\chapter05\FinalProject_Steven
-d
\\vsrvm\Aspen_Creek\student\Sophia Steven\private\Java Files_2016\Java Chapter Files\chapter05\FinalProject_Steven\doc
-encoding
windows-1252
-charset
windows-1252
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\vsrvm\Aspen_Creek\student\Sophia Steven\private\Java Files_2016\Java Chapter Files\chapter05\FinalProject_Steven\SupportSystem.java
<---- end of javadoc command ---->
Loading source file \\vsrvm\Aspen_Creek\student\Sophia Steven\private\Java Files_2016\Java Chapter Files\chapter05\FinalProject_Steven\SupportSystem.java...
\\vsrvm\Aspen_Creek\student\Sophia Steven\private\Java Files_2016\Java Chapter Files\chapter05\FinalProject_Steven\SupportSystem.java:355: error: ')' expected
                    printGoodbye();
                                  ^
1 error
